# web_monitoring_bots

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_notif.py
.github/workflows/: workflow_1.yaml  workflow_2.yaml
src/web_monitoring_bots/: browser_automation.py  monitor.py
